--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.15",
     "formik": "^2.2.9",
     "gsap": "^3.10.3",
+    "i18next": "^21.6.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
